[package]
name = "web_hunter"
version = "0.1.0"
edition = "2018"
authors = ["Brandon brandoncampbell98@hotmail.co.uk"]

description = "Web Hunter is designed to easily get pull data from a website"
keywords = ["scaper"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.7", features = ["derive"] }
anyhow = {version = "1.0.52"}
select = "0.5.0"
error-chain = "0.12.4"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
